--- a/style.css
+++ b/style.css
@@ -1,28 +1,89 @@
-body{
+ /* Sets controls and style for header element */
+header {
+	text-align: center;
 	font-size: 20px;
-	font-family: sans-serif;
-	color: #333;
+	background-color: #51a45b;
+	width: 700px;
+	margin: 0 auto;
+  border: 2px solid #ff7171;
 }
-.question{
-	font-weight: 600;
+
+/* Sets controls and style for body element */
+body {
+    background-color: #413D3D;
 }
-.answers {
-  margin-bottom: 20px;
+
+/* Sets display to none till user starts quiz */
+#quiz {
+  display: none;
 }
-.answers label{
-  display: block;
+
+/* Adds control for the question grid and padding */
+.grid {
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    background-color: rgb(51, 149, 144);
+    padding: 10px 50px 50px 50px;
+    border: 2px solid #ff7171;
 }
-#submit{
-	font-family: sans-serif;
-	font-size: 20px;
-	background-color: #279;
-	color: #fff;
-	border: 0px;
-	border-radius: 3px;
-	padding: 20px;
-	cursor: pointer;
-	margin-bottom: 20px;
+
+ /* Sets background and color for title */
+.grid h1 {
+    font-family: "sans-serif";
+    background-color:wheat;
+    font-size: 40px;
+    text-align: center;
+    color: #12495d;
+    padding: 2px 0px;
 }
-#submit:hover{
-	background-color: #38a;
+ 
+ /* Sets background and color for score */
+ #score {
+    color: #12495d;
+    text-align: center;
+    font-size: 20px;
+    background-color: wheat;
 }
+ 
+/* Sets  */
+.grid #question {
+    font-family: "monospace";
+    font-size: 28px;
+    align-content: center;
+    color: rgb(23, 29, 75);
+}
+ 
+/* Creates spacing above buttons */
+.buttons {
+    margin-top: 30px;
+}
+ 
+/* Sets controls and stylign for questions (btns) */
+#btn0, #btn1, #btn2, #btn3 {
+    background-color: #bce1ef;
+    width: 250px;
+    font-size: 20px;
+    color: rgb(23, 29, 75);
+    border: 1px solid #1D3C6A;
+    margin: 10px 40px 10px 0px;
+    padding: 10px 10px;
+}
+ 
+/* Sets hover element for questions */
+#btn0:hover, #btn1:hover, #btn2:hover, #btn3:hover {
+    cursor: pointer;
+    background-color: #4e8fa7;
+}
+ 
+/* Sets focus outline for buttons */
+#btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
+    outline: 0;
+}
+ 
+/* Sets color and size for progress on bottom */
+#progress {
+    color: #2b2b2b;
+    font-size: 18px;
+}
+
